--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,9 @@ html {
 
 table {
     border-collapse: collapse;
+    position: absolute;
+    top: 35%;
+    left: 41.7%;
 
 }
 
@@ -26,6 +29,9 @@ button{
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  position: absolute;
+  left: 10px;
+  top: 10px;
 }
 
 h3 {
@@ -36,6 +42,11 @@ h3 {
   border: 3px solid #008CBA;
   text-align: center;
   line-height: 50px;
+}
+
+h2 {
+  text-align: center;
+  font-size: 50px
 }
 
 img {
