--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,9 +14,8 @@ html {
 
 table {
     border-collapse: collapse;
-    position: absolute;
-    top: 35%;
-    left: 41.7%;
+    position: relative;
+    margin: auto;
 
 }
 
