--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,9 @@ td {
     height: 100px;
     width: 100px;
     background-color: white;
+    position: relative;
+    margin: auto;
+    cursor:pointer;
 }
 html {
   background: url(../assets/Background.png) no-repeat center center fixed;
@@ -31,11 +34,21 @@ button{
   position: absolute;
   left: 10px;
   top: 10px;
+  cursor:pointer;
+}
+
+.btn-start{
+  left: 0px;
+  top: 0px;
+  position: relative;
+  margin: auto;
 }
 
 h3 {
-  margin: auto;
-  width: 25%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+  width: 300px;
   font-family: arial;
   font-size: 30px;
   border: 3px solid #008CBA;
